k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sup
  labels:
    app: sup
    version: v1
